[package]
name = "ExamLeray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4" 
good_lp = { version = "*", features = ["coin_cbc"], default-features = false } 
serde_json = "1.0.64"

[dev-dependencies]
assert_cli = "0.6.3"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
lto = true